--- a/examples/richmarker.html
+++ b/examples/richmarker.html
@@ -85,7 +85,7 @@
           position: new google.maps.LatLng(30, 50),
           draggable: true,
           flat: true,
-          anchor: RichMarkerPosition.MIDDLE,
+          anchor: RichMarker.RichMarkerPosition.MIDDLE,
           content: div
         });
 
